--- a/FrontEnd/src/pages/Signinup/Authentication.css
+++ b/FrontEnd/src/pages/Signinup/Authentication.css
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: italic ;
   box-sizing: border-box;
 }
 
@@ -74,7 +75,7 @@ form.sign-in-form {
     background-color: #f0f0f0;
     margin: 12px 0;
     height: 45px;
-    border-radius: 55px;
+    border: 1px solid #BE4040;
     display: grid;
     grid-template-columns: 15% 85%;
     padding: 0 0.4rem;
@@ -92,12 +93,12 @@ form.sign-in-form {
 
 
 .input-field {
-  max-width: 380px;
-  width: 100%;
-  background-color: #f0f0f0;
+  width: 390.83px;
+  background-color: #CA52520F;
   margin: 16px 0;
-  height: 55px;
-  border-radius: 55px;
+  height:  62px;
+  border: 1px solid #BE4040;
+  border-radius: 20px;
   display: grid;
   grid-template-columns: 15% 85%;
   padding: 0 0.4rem;
@@ -126,7 +127,7 @@ form.sign-in-form {
   font-size: 16px;
 }
 .input-field small {
-  color: red;
+  color: #BE4040;
   display: inline;
   width: 200px;
   height: 20px;
@@ -184,15 +185,15 @@ form.sign-in-form {
   border-color: green;
 }
 .input-field .error input{
-  border-color: red;
+  border-color: #BE4040;
 }
 .input-field .error{
-  color: red;
+  color: #BE4040;
   width: 250px;
   font-size: 13px;
 }
 #checkbox-error{
-  color: red;
+  color: #BE4040;
   font-size: 15px;
 }
 #checkbox{
@@ -205,9 +206,9 @@ form.sign-in-form {
   justify-content: center;
   align-items: center;
   margin: 0 0.45rem;
-  color: #110701;
+  color: #BE4040;
   border-radius: 50%;
-  border: 1px solid  #110701;
+  border: 1px solid  #BE4040;
   text-decoration: none;
   font-size: 1.1rem;
   transition: 0.3s;
@@ -215,17 +216,17 @@ form.sign-in-form {
 
 .social-icon:hover {
   color: #fff;
-  border-color: #110701;
-  background-color: #110701 ;
+  border-color: #BE4040;
+  background-color: #BE4040 ;
 }
 
 .btn {
-  width: 180px;
-  background-color: #110701;
-  border: none;
+  width: 157px;
+  background-color: #BE4040;
+  border: 1px solid transparent;
+  border-radius: 12px;
   outline: none;
-  height: 49px;
-  border-radius: 49px;
+  height: 48px;
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
@@ -233,12 +234,10 @@ form.sign-in-form {
   margin-bottom: 9px;
   cursor: pointer;
   transition: 0.5s;
-    font-family: "Poppins", sans-serif;
-
 }
 
 .btn:hover {
-  background-color: #110701;
+  background-color: #BE4040;
 }
 .panels-container {
   position: absolute;
@@ -258,7 +257,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #110701 0%, #110701 100%);
+  background-image: linear-gradient(-45deg, #BE4040 0%, #BE4040 100%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
@@ -329,7 +328,7 @@ form.sign-in-form {
 .btn.transparent:hover {
    background-color: #fff;
     border: 2px solid #fff;
-    color:#110701;
+    color:#BE4040;
     width: 170px;
     height: 41px;
     font-weight: 600;
@@ -346,7 +345,7 @@ form.sign-in-form {
   font-family: "Poppins", sans-serif;
   text-decoration: none;
   transition: 00.5s  ease-in-out;
-  color:#110701;
+  color:#BE4040;
 }
 
 
