--- a/FrontEnd/src/pages/Signinup/Authentication.css
+++ b/FrontEnd/src/pages/Signinup/Authentication.css
@@ -1,10 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 * {
   margin: 0;
   padding: 0;
-  font-family: italic ;
   box-sizing: border-box;
 }
 
@@ -105,37 +102,19 @@ form.sign-in-form {
   position: relative;
 }
 
-.input-field i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  transition: 0.5s;
-  font-size: 1.1rem;
-}
-#email-label{
-  position: absolute;
-  display: block;
-  bottom: 15px;
-  left: 50px;
-  color: #777;
-  font-size: 18px;
-}
-#email-error{
-  position: absolute;
-  top: 100%;
-  left: 2px;
-  font-size: 16px;
-}
-.input-field small {
-  color: #BE4040;
-  display: inline;
-  width: 200px;
+
+
+ small {
+  color: red;
+ font-size: 15px;
+ top: 100%;
+ display: flex;
+  width: 100%;
   height: 20px;
-  margin: 5px 5px 0 5px;
+ 
 }
 
 #password-label{
-  position: absolute;
   display: block;
   bottom: 15px;
   left: 50px;
@@ -143,31 +122,23 @@ form.sign-in-form {
   font-size: 18px;
 }
 #password-error{
-  position: absolute;
   top: 100%;
   left: 2px;
+  color: red;
   font-size: 16px;
 }
-.input-field input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #333;
+.error{
+  color: red;
+ font-size: 15px;
+ top: 100%;
+ display: flex;
+  width: 100%;
+  height: 20px;
+ 
 }
-
-.input-field input::placeholder {
-  color: #aaa;
-  font-weight: 500;
-}
-
 .social-text {
   padding: 0.7rem 0;
   font-size: 1rem;
-  font-family: "Poppins", sans-serif;
-
 }
 
 
