--- a/FrontEnd/src/componenet/ProductList/ProductList.css
+++ b/FrontEnd/src/componenet/ProductList/ProductList.css
@@ -6,11 +6,9 @@
     margin-right: 10dvb;
     margin-left: 10dvb;
     align-items: center;
-    
-    
-    
-      
-      
+}
+.row{
+    gap:8px;
 }
 .ProductList h3{
   
