--- a/FrontEnd/src/componenet/Products/Products.css
+++ b/FrontEnd/src/componenet/Products/Products.css
@@ -1,8 +1,9 @@
 .card{
     
     border-radius: 2dvb;
-    width: 37dvb;
-    height: 55dvb;
+    width:230px;
+    justify-content: center;
+    height: 350px;
     margin: 3px;
     padding: 15px;
     color: #BE4040;
@@ -35,3 +36,18 @@
    border-radius: 5px;
 }
 
+@media(min-width:320px) and (max-width:425px){
+    .card{
+    
+        border-radius: 2dvb;
+        width:630px;
+        height: 350px;
+        margin: 3px;
+        padding: 15px;
+        color: #BE4040;
+        background-color: #FFFFBA;
+       
+     
+    
+    }
+}
