--- a/FrontEnd/src/componenet/ProductList/ProductList.css
+++ b/FrontEnd/src/componenet/ProductList/ProductList.css
@@ -19,11 +19,13 @@ font-size: 40px;
 font-style: italic;
 font-weight: 400;
 line-height: 66px;
+margin-top: 9px;
 letter-spacing: 0em;
-text-align: center;
+text-align: left;
 
 }
 .row{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
