--- a/FrontEnd/src/componenet/Products/Products.css
+++ b/FrontEnd/src/componenet/Products/Products.css
@@ -1,9 +1,11 @@
 .card{
-    
-    border-radius: 2dvb;
-    width:230px;
+    border-bottom-right-radius: 30px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    width:330px;
     justify-content: center;
-    height: 350px;
+    height: 380px;
     margin: 3px;
     padding: 15px;
     color: #BE4040;
@@ -38,10 +40,12 @@
 
 @media(min-width:320px) and (max-width:425px){
     .card{
-    
-        border-radius: 2dvb;
+        border-bottom-right-radius: 30px;
+        border-top-left-radius: 30px;
+        border-top-right-radius: 3px;
+        border-bottom-left-radius: 3px;
         width:630px;
-        height: 350px;
+        height: 380px;
         margin: 3px;
         padding: 15px;
         color: #BE4040;
