footer in home page responsive

--- a/FrontEnd/src/componenet/Navbar/Navbar.css
+++ b/FrontEnd/src/componenet/Navbar/Navbar.css
@@ -57,6 +57,7 @@ text-align: center;
   .Home h1{
    font-size: 25px;
     margin-top: 10px;
+    margin-left: 30px;
     }
   .navbar ul{
     list-style-type: none;
