--- a/FrontEnd/src/componenet/Navbar/Navbar.css
+++ b/FrontEnd/src/componenet/Navbar/Navbar.css
@@ -1,8 +1,4 @@
-*{
-  margin: 0;
-  padding: 0;
-  /* font-family: Lucida Handwriting; */
-}
+
 .navbar{
     background: #BE4040;
 
@@ -13,18 +9,18 @@
 font-size: 28px;
 font-style: italic;
 font-weight: 400;
-line-height: 50px;
+
 letter-spacing: 0em;
 text-align: center;
 
   }
   .nav1 {
     list-style-type: none;
-    background-color : hsl(0, 50%, 50%);
+    background-color: #CA5252C7;
     padding: 0px;
-    color: #FFFFBA;
+    color: #fff;
     margin: 0px;
-    height: 70px;
+    height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -59,6 +55,15 @@ text-align: center;
     margin-top: 10px;
     margin-left: 30px;
     }
+    .log{
+      background-color : hsl(0, 50%, 50%);
+      width: 60px;
+      height: 25px;
+      border-radius: 10px;
+      border: none;
+      color: #FFFFBA;
+      font-family: Lucida Handwriting;
+    }
   .navbar ul{
     list-style-type: none;
     background-color : hsl(0, 50%, 50%);
@@ -81,19 +86,39 @@ text-align: center;
   }
   
   .nav2{
-    color: #CA5252C7;
-    background-color :  #FFFFBA;
+    color: hsl(0, 50%, 50%);
+    background-color :  #fff;
     margin: 0px;
     height: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     font-family: Lucida Handwriting;
-  font-size: 40px;
-font-weight: 400;
-letter-spacing: 0.06em;
+  font-size: 35px;
+border-bottom: 1px solid black;
 text-align: center;
   }
   .navbar2 div{
     
     margin: 0px;
+  }
+  .icons{
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    gap: 9px;
+    margin-right: 20px;
+  }
+  .icon2{
+    margin-left: 20px;
+    display: flex;
+    gap: 7px;
+    align-items: center;
+  }
+  .icon2 input{
+    border-radius: 3px;
+    border:1px solid black;
+    height: 30px;
   }
   .navbar2 ul{
     list-style-type: none;
@@ -136,14 +161,14 @@ text-align: center;
    display: flex;
    font-size: 22px;
       justify-content: center;
-      bottom: 10px;
+      margin-bottom: 15px;
     }
     .nav2 p{
       font-size: 22px;
+      margin-top: 10px;
     }
     .Home h1{
     font-size: 19px;
-    margin-top: 20px;
     }
     .nav1{
       height: 50px;
