--- a/FrontEnd/src/componenet/ProductList/ProductList.css
+++ b/FrontEnd/src/componenet/ProductList/ProductList.css
@@ -11,15 +11,20 @@
 .row{
     gap:8px;
 }
+.detail{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 .ProductList h3{
   
     color: #BE4040;
-    padding: 2dvb;
+   
     font-family: Lucida Handwriting;
-font-size: 30px;
+font-size: 20px;
 font-style: italic;
-margin-top: 9px;
-letter-spacing: 0em;
+margin-top: 30px;
+
 text-align: left;
 
 }
