--- a/FrontEnd/src/pages/Details/Details.css
+++ b/FrontEnd/src/pages/Details/Details.css
@@ -1,11 +1,9 @@
 
 .Details3{
-    height: 500px;
-    max-width: 1300px;
-    width: 100%;
     margin: 90px auto;
     box-shadow: 0 0 0.5px ;
     color: #BE4040;
+    max-width: 1379px;
         background-color:rgb(255, 251, 236);
         font-family: Lucida Handwriting;
 }
@@ -29,7 +27,6 @@
 }
 .img-product2 img{
     max-height: 600px;
-    max-width: 390px;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -41,9 +38,11 @@
 .box2{
     max-width: 610px;
     max-height: 390px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0px;
-    background-color:rgb(255, 251, 236);;
-    
+    background-color:rgb(255, 251, 236);
 }
 .box2 h5{
     font-size: 20px;
@@ -54,7 +53,7 @@
     background-color: rgb(255, 251, 236);
     margin: 30px 0;
     font-size: 18px;
-    
+   
     
     
 }
@@ -62,13 +61,14 @@
 .row2{
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
    
 }
  .row2 h2{
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size:20px ;
-    
+    margin-top: 30px;
 }
 
 
@@ -159,12 +159,48 @@ margin-left: 5px;
    }
 
 
-@media (max-width:200px) {
-    .thumb2{height: 50px;
-        width: 50px;
+@media (max-width:1200px) and (min-width:320px) {
+    .Details3{
+        margin: 90px auto;
+        height: 790px;
+        box-shadow: 0 0 0.5px ;
+        color: #BE4040;
+        max-width: 1379px;
+            background-color:rgb(255, 251, 236);
+            font-family: Lucida Handwriting;
     }
-    .thumb2 img{
-        width: 50px;
+    .box2{
+        max-width: 610px;
+        max-height: 390px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0px;
+        background-color:rgb(255, 251, 236);;
+        
+    }
+    .dis2{
+    
+        background-color: rgb(255, 251, 236);
+        margin: 30px 0;
+        font-size: 18px;
+        text-align: center;
+        
+        
+    }
+    .row2{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+       
+    }
+     .row2 h2{
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        font-size:20px ;
+        text-align: center;
+        margin-top: 62px;
     }
 }
 
