--- a/FrontEnd/src/componenet/Navbar/Navbar.css
+++ b/FrontEnd/src/componenet/Navbar/Navbar.css
@@ -107,10 +107,12 @@ text-align: center;
     display: flex;
     align-items: center;
     gap: 9px;
+    cursor: pointer;
     margin-right: 20px;
   }
   .icon2{
     margin-left: 20px;
+    cursor: pointer;
     display: flex;
     gap: 7px;
     align-items: center;
