--- a/FrontEnd/src/componenet/ImageSlider/ImageSlider.css
+++ b/FrontEnd/src/componenet/ImageSlider/ImageSlider.css
@@ -1,16 +1,47 @@
-.leftArrowStyles{
+.slideStyles {
     position: relative;
-    top:25vh;
+  }
+  
+  .slideStyles1 {
+    width: 100%;
+    height: 400px; 
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    margin-top: 10px;
+  }
+  
+  .leftArrowStyles,
+  .RightArowStyles {
+    font-size: 24px;
+    color: #fff;
+    border: none;
+    padding: 10px;
     cursor: pointer;
-    margin-left: 60px;
-    margin-right: 10px;
-    width: 40px;
-}
-.RightArowStyles{
-    position: relative;
-    top:25vh;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+  }
+  
+  .RightArowStyles {
+    right: 0;
+  }
+  
+  .dot {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .dotstyle {
+    font-size: 18px;
+    margin: 0 5px;
     cursor: pointer;
-    margin-right: 60px;
-    margin-left: 10px;
-    width: 40px;
-}
+    color: #333;
+  }
+  
+  .dotstyle.active {
+    color: red;
+  }
+  
