--- a/FrontEnd/src/componenet/ProductList/ProductList.css
+++ b/FrontEnd/src/componenet/ProductList/ProductList.css
@@ -2,9 +2,8 @@
     padding: 70px 0;
     height: inherit;
     margin: auto;
-    margin-top: 5dvb;
-    margin-right: 10dvb;
-    margin-left: 10dvb;
+    margin-top: 5px;
+    margin-left: 30px;
     align-items: center;
     
 }
