--- a/FrontEnd/src/pages/Cart/Cart.css
+++ b/FrontEnd/src/pages/Cart/Cart.css
@@ -78,9 +78,16 @@
   cursor: pointer;
   font-size: 16px;
   margin-top: 20px;
-  margin-left: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 3px;
 }
-
+.checkout-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .checkout-button:hover {
   background-color: #cc7474;
 }
