--- a/FrontEnd/src/pages/Profile/Profile.css
+++ b/FrontEnd/src/pages/Profile/Profile.css
@@ -1,13 +1,32 @@
+
 .profile{
   flex-wrap: wrap;
   width: 70%;
+  flex: 1;
   align-content: center;
   align-items: center;
   margin: auto;
   padding: 2px 0;
+  margin-top: 20px;
   border :2px solid #FFFFBA;
   border-radius: 40px;
   padding-bottom: 20px;
+ 
+}
+.order1{
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 10px;
+  margin-top: 70px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.order {
+  margin-left: 40px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 .profile-header{
   background-color: #FFFFBA;
@@ -65,11 +84,24 @@ border-bottom: #FFFFBA 2px solid;
   font-family: cursive;
 }
 .profile-btns{
-  width: 60%;
   display: flex;
-  gap:10px;
+  gap: 10px;
   margin: auto;
+  justify-content: center;
   align-content: center;
+  align-items: center;
+}
+.comment{
+  display: flex;
+  justify-content: center;
+  margin-left: 90px;
+}
+.comment input{
+  height: 70px;
+  width: 290px;
+  margin-right: 20px;
+  border-radius: 12px;
+  border: 1px solid #ddd;
 }
 .Profilebutton2{
   background-color: #fff;
@@ -84,9 +116,84 @@ border-bottom: #FFFFBA 2px solid;
   text-transform: uppercase;
   cursor: pointer;
   transition: 0.5s;
-  width: 65%;
-  
 }
+.order-container {
+  max-width: 800px;
+  margin: auto;
+  margin-bottom: 10px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.order2 {
+  font-size: 30px;
+   display: flex;
+   justify-content: space-between;
+}
+.order-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.product-info {
+  display: flex;
+  align-items: center;
+}
+.star-icons{
+  margin-left: 70px;
+}
+.product-info img {
+  width: 150px;
+  height: 100px;
+  border: 1px solid black;
+  margin-right: 10px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.item-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-name {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.product-price {
+  color: #555;
+}
+
+.quantity {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.quantity input {
+  width: 50px;
+  margin-top: 5px;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.total-price {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
+
+
 @media only screen and (max-width: 320px) {
   .Edprofile-img{
     width: 32%;
@@ -95,18 +202,54 @@ border-bottom: #FFFFBA 2px solid;
   .Edprofile-btns{
   height: 30%;
   }
+  .product-name {
+    font-size: 10px;
+  }
+  span{
+    font-size: 12px;
+  }
 }
 @media only screen and (max-width: 375px) {
   .profile-img{
     width: 35%;
     height: 35%;
   }
+  .order2 {
+    font-size: 12px;
+     display: flex;
+     justify-content: space-between;
+  }
+  .order-container {
+    max-width: 100%;
+  }
+  
+  .product-info img {
+    width: 50px;
+    height: 100px;
+  }
+
+  .product-name {
+    font-size: 14px;
+  }
+  .item-details{
+    font-size: 12px;
+  }
+  .star-icons{
+    margin-left: 10px;
+  }
+
+  .product-price,
+  .total-price {
+    font-size: 16px;
+  }  
 }
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 430px) {
   .profile-img-box{
-    width: 27%;
     height: 27%;
  
+  }
+  .item-details{
+    font-size: 12px;
   }
   .profile-img{
     width: 50%;
@@ -128,7 +271,6 @@ border-bottom: #FFFFBA 2px solid;
   font-size: 13px;
 }
 .profile-btns{
-  width: 40%;
   gap:5px;
 }
 .profile-btns :any-link{
@@ -138,10 +280,15 @@ border-bottom: #FFFFBA 2px solid;
 .profile{
   width: 90%;
 }
+.order2 {
+  font-size: 17px;
+   display: flex;
+   justify-content: space-between;
+}
 }
 @media only screen and (min-width: 768px) {
   .profile-img-box{
-    width: 17%;
+    width: 50%;
     height: 17%;
  
   }
@@ -150,6 +297,11 @@ border-bottom: #FFFFBA 2px solid;
     height: 40%;
     top:50px;
   }
+  .order2 {
+    font-size: 12px;
+     display: flex;
+     justify-content: space-between;
+  }
   .profile-header-text p {
     font-size: 20px;
     right:30% ;
@@ -157,6 +309,33 @@ border-bottom: #FFFFBA 2px solid;
   }
   .profile-header{
   padding: 5px 0;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .order-container {
+    max-width: 100%;
+  }
+  
+  .product-info img {
+    width: 80px;
+    height: 100px;
+  }
+
+  .product-name {
+    font-size: 12px;
+  }
+  .star-icons{
+    margin-left: 0px;
+  }
+
+  .product-price,
+  .total-price {
+    font-size: 14px;
+  }  
+  .order2 {
+    font-size: 17px;
+     display: flex;
+     justify-content: space-between;
   }
 }
 
