--- a/FrontEnd/src/pages/Cart/Cart.css
+++ b/FrontEnd/src/pages/Cart/Cart.css
@@ -83,6 +83,21 @@
   align-items: center;
   margin-left: 3px;
 }
+.goback-button {
+  background-color: #fff;
+  color: #BE4040;
+  padding: 10px 20px;
+  width: 120px;
+  border: 1px solid #BE4040;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+}
 .checkout-button-container {
   display: flex;
   justify-content: center;
