adding userList in Dashboard

--- a/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
+++ b/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
@@ -41,7 +41,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-}
-.log-out a{
-    background-color: #be4040;
+    margin-right: 25px;
+
+    
 }
