--- a/FrontEnd/src/dashboard/pages/home/HomePage.css
+++ b/FrontEnd/src/dashboard/pages/home/HomePage.css
@@ -1,9 +1,9 @@
-.homePage{
+.homePage1{
     font-family: 'Poppins', sans-serif;
     font-family: 'Source Sans 3', sans-serif;
     margin: 0;
 }
-.container{
+.container3{
     display: flex;
 }
 .other{
