--- a/FrontEnd/src/componenet/Navbar/Navbar.css
+++ b/FrontEnd/src/componenet/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   font-family: Lucida Handwriting;
 }
 .navbar{
-    background: #CA5252C7;
+    background: #BE4040;
 
     margin: 0px;
     height: inherit;
@@ -80,6 +80,7 @@ text-align: center;
   }
   
   .nav2{
+    color: #CA5252C7;
     background-color :  #FFFFBA;
     margin: 0px;
     height: inherit;
