add dashboard pages

--- a/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
+++ b/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
@@ -18,10 +18,11 @@
     margin-bottom: 5px;
 }
 .sidebarList{
-    list-style: none;
-    padding: 5px;
+    
+    padding: 17px;
 }
 .sidebarlistItem{
+    text-decoration: none;
     padding: 3px;
     cursor: pointer;
     display: flex;
@@ -42,6 +43,7 @@
     bottom: 0;
     width: 100%;
     margin-right: 25px;
+    margin-bottom: 35px;
 
     
 }
