--- a/FrontEnd/src/dashboard/DashComponent/Topbar/topbar.css
+++ b/FrontEnd/src/dashboard/DashComponent/Topbar/topbar.css
@@ -3,7 +3,7 @@
     height: 50px;
     background-color: #FFFFDA;
     position: sticky;
-    top :0;
+    top :0px;
     z-index: 999;
 }
 .topbarWrapper{
