--- a/FrontEnd/src/dashboard/DashComponent/WidgetLg/WidgetLg.css
+++ b/FrontEnd/src/dashboard/DashComponent/WidgetLg/WidgetLg.css
@@ -1,5 +1,6 @@
 .WidgetLg{
     flex: 1;
+    margin: 15px 20px;
     -webkit-box-shadow: 0px 0px 0px 15px -10px rgba(0,0,0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
     padding: 20px;
