--- a/FrontEnd/src/componenet/Navbar/Navbar.css
+++ b/FrontEnd/src/componenet/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: Lucida Handwriting;
+  /* font-family: Lucida Handwriting; */
 }
 .navbar{
     background: #CA5252C7;
