--- a/FrontEnd/src/pages/checkout/Checkout.css
+++ b/FrontEnd/src/pages/checkout/Checkout.css
@@ -1,7 +1,7 @@
 *{
     margin:0;
     padding: 0;
-    font-family: Lucida Handwriting;
+    /* font-family: Lucida Handwriting; */
 }
 
 .container p{
