--- a/FrontEnd/src/pages/checkout/Checkout.css
+++ b/FrontEnd/src/pages/checkout/Checkout.css
@@ -3,14 +3,14 @@
     padding: 0;
 }
 
-.container p{
+.container2 p{
     display: flex;
     margin-left: 18px;
     margin-top: 37px;
     font-size: 19px;
 
 }
-.container h1{
+.container2 h1{
     margin-top: 25px;
 
 }
