--- a/FrontEnd/src/dashboard/DashComponent/FeaturedInfo/FeaturedInfo.css
+++ b/FrontEnd/src/dashboard/DashComponent/FeaturedInfo/FeaturedInfo.css
@@ -1,6 +1,8 @@
 .featured{
-    width: 100%;
+    width: 93%;
     display: flex;
+    gap: 4px;
+    margin-top: 60px;
     /* flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
@@ -8,8 +10,10 @@
 }
 .featuredItem{
     flex :1;
-    margin: 0px 20px;
+    margin: 0px 2px;
     margin-top: 10px;
+    margin-left: 20px;
+    margin-right: -20px;
     border-radius: 10px;
     cursor: pointer;
     -webkit-box-shadow: 0px 0px 0px 15px -10px rgba(0,0,0, 0.75);
