--- a/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
+++ b/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
@@ -1,14 +1,26 @@
+*{
+    text-decoration: none;
+}
 .sidebar{
-    flex: 2;
-    height: calc(100vh - 10px);
+        height: calc(100vh - 10px);
     background-color: #FFFFDA;
     position: sticky;
-    top: 50px;   
+    text-decoration: none;
+    list-style: none;
+    top: 50px;
+    margin: 0;   
 }
 .sidebarTitle{
     font-style: 13px;
     color: #be404088;
     margin-bottom: -12px;
+}
+button{
+    background-color:#BE4040 ;
+    width:100px;
+    border-radius: 12px;
+    height: 44px;
+    color: #FFFFDA;
 }
 .sidebarWrapper{
     padding: 5px;
@@ -23,6 +35,7 @@
 }
 .sidebarlistItem{
     text-decoration: none;
+    list-style: none;
     padding: 3px;
     cursor: pointer;
     display: flex;
@@ -44,6 +57,6 @@
     width: 100%;
     margin-right: 25px;
     margin-bottom: 35px;
-
+  text-decoration: none;
     
 }
