--- a/FrontEnd/src/dashboard/DashComponent/Topbar/topbar.css
+++ b/FrontEnd/src/dashboard/DashComponent/Topbar/topbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 50px;
     background-color: #FFFFDA;
-    position: sticky;
+    position: fixed;
     top :0px;
     z-index: 999;
 }
