--- a/FrontEnd/src/dashboard/pages/DProductList/DProductList.css
+++ b/FrontEnd/src/dashboard/pages/DProductList/DProductList.css
@@ -19,13 +19,13 @@
     border: none;
     border-radius: 10px;
     padding: 5px 10px;
-    background-color: #3bb077;
+    background-color: #BE4040;
     color: white;
     cursor: pointer;
     margin-right: 20px;
 }
 
 .DproductListDelete{
-    color: red;
+    color: #BE4040;
     cursor: pointer;
 }
