--- a/FrontEnd/src/dashboard/pages/NewProducts/NewProduct.css
+++ b/FrontEnd/src/dashboard/pages/NewProducts/NewProduct.css
@@ -18,6 +18,12 @@
     font-weight: 600;
     margin-bottom: 10px;
   }
+  .addProductTitle{
+    color: #BE4040;
+    align-items: center;
+    
+    margin-left: 20;
+  }
   
   .addProductItem > input {
     padding: 10px;
