--- a/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
+++ b/FrontEnd/src/dashboard/DashComponent/Sidebar/sidebar.css
@@ -1,26 +1,14 @@
-*{
-    text-decoration: none;
-}
 .sidebar{
-        height: calc(100vh - 10px);
+    flex: 2;
+    height: calc(100vh - 10px);
     background-color: #FFFFDA;
     position: sticky;
-    text-decoration: none;
-    list-style: none;
-    top: 50px;
-    margin: 0;   
+    top: 50px;   
 }
 .sidebarTitle{
     font-style: 13px;
     color: #be404088;
     margin-bottom: -12px;
-}
-button{
-    background-color:#BE4040 ;
-    width:100px;
-    border-radius: 12px;
-    height: 44px;
-    color: #FFFFDA;
 }
 .sidebarWrapper{
     padding: 5px;
@@ -35,7 +23,6 @@ button{
 }
 .sidebarlistItem{
     text-decoration: none;
-    list-style: none;
     padding: 3px;
     cursor: pointer;
     display: flex;
@@ -57,6 +44,6 @@ button{
     width: 100%;
     margin-right: 25px;
     margin-bottom: 35px;
-  text-decoration: none;
+
     
 }
