--- a/FrontEnd/src/componenet/footer/Footer.css
+++ b/FrontEnd/src/componenet/footer/Footer.css
@@ -7,6 +7,7 @@
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     height:200px;
+    bottom: 0;
     color:  #FFF;
     background-color: #CA5252C7;
 }
