--- a/FrontEnd/src/pages/EditProfile/EditProfile.css
+++ b/FrontEnd/src/pages/EditProfile/EditProfile.css
@@ -56,6 +56,8 @@ border-bottom: #FFFFBA 2px solid;
   gap:10px;
   margin: auto;
   text-decoration: none;
+  align-items: center;
+
 }
 .Edprofilebutton2{
   background-color: #fff;
