--- a/FrontEnd/src/pages/Details/Details.css
+++ b/FrontEnd/src/pages/Details/Details.css
@@ -4,21 +4,16 @@
     box-shadow: 0 0 0.5px ;
     color: #BE4040;
     max-width: 1379px;
-        background-color:rgb(255, 251, 236);
-        font-family: Lucida Handwriting;
+    background-color:rgb(255, 251, 236);
+    font-family: Lucida Handwriting;
 }
-
-.details3{
-    
+.details3{ 
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 30px 0;
-    
 }
-
-.img-product2{
-    
+.img-product2{ 
     background-color:rgb(255, 251, 236);
     overflow: hidden;
     margin-left: 10px;
@@ -41,40 +36,35 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0px;
     background-color:rgb(255, 251, 236);
 }
 .box2 h5{
     font-size: 20px;
     color: #cc7777;
+    margin-left: 50px; 
+    margin-top: 5px; 
 }
 .dis2{
-    
+    margin-left: 25px;
     background-color: rgb(255, 251, 236);
-    margin: 30px 0;
+    margin-top: 10px;
+    margin-bottom: 30px;
     font-size: 18px;
-   
-    
-    
 }
-
 .row2{
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-   
+    margin-left: 20px;
 }
  .row2 h2{
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size:20px ;
-    margin-top: 30px;
+    margin-top: -20px;
+    margin-left: 7px;
 }
-
-
-
 .add-card2 .ato{
-   
     width: 256px;
     background-color: #BE4040;
     border: 1px solid white;
@@ -85,12 +75,11 @@
     text-transform: uppercase;
     font-weight: 600;
     margin-bottom: 6px;
-     
+    margin-left: 20px;
     cursor: pointer;
     transition: 0.5s;
 }
-.add-card2 .bto{
-    
+.add-card2 .bto{ 
     width: 256px;
     background-color:  #fff;
     border: 1px solid #BE4040;
@@ -101,32 +90,32 @@
     text-transform: uppercase;
     font-weight: 600;
     margin-bottom: 6px;
-     
     cursor: pointer;
     transition: 0.5s;
+    margin-left: 20px;
 }
 .thumb2{
-width: 100%;
-height: 40px;
-display: flex;
-width: 112px;
-background-color:  #fff;
-border: 1px solid #BE4040;
-border-radius: 6px;
-outline: none;
-color: #BE4040;
-text-transform: uppercase;
-font-weight: 600;
-margin-bottom: 10px;
-cursor: pointer;
-transition: 0.5s;
-margin-left: 5px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    width: 112px;
+    background-color:  #fff;
+    border: 1px solid #BE4040;
+    border-radius: 6px;
+    outline: none;
+    color: #BE4040;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: 0.5s;
+    margin-left: 25px;
 }
 .countb{
     margin-top: 10px;
 }
 
-   .bmax{
+.bmax{
     font-size: 30px;
     width: 50px;
     height: 30px;
@@ -140,9 +129,9 @@ margin-left: 5px;
     margin-bottom: 6px;
     cursor: pointer;
     transition: 0.5s;
-   }
+}
 
-   .bmin{
+.bmin{
     font-size: 30px;
     width: 46px;
     height: 30px;
@@ -156,7 +145,30 @@ margin-left: 5px;
     margin-bottom: 6px;
     cursor: pointer;
     transition: 0.5s;
-   }
+}
+.reviews {
+    margin-top: 30px;
+}
+.reviews h3 {
+    margin-left: 220px;
+    margin-bottom: 20px;
+}
+.review-list {
+    list-style-type: none;
+    padding: 0;
+}
+.review-item {
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.star-rating {
+    margin-top: 5px;
+    font-size: 1.5em;
+    color: #FFD700; 
+    cursor: pointer;
+}
 
 
 @media (max-width:1200px) and (min-width:320px) {
@@ -166,8 +178,8 @@ margin-left: 5px;
         box-shadow: 0 0 0.5px ;
         color: #BE4040;
         max-width: 1379px;
-            background-color:rgb(255, 251, 236);
-            font-family: Lucida Handwriting;
+        background-color:rgb(255, 251, 236);
+        font-family: Lucida Handwriting;
     }
     .box2{
         max-width: 610px;
@@ -201,6 +213,29 @@ margin-left: 5px;
         font-size:20px ;
         text-align: center;
         margin-top: 62px;
+    }
+    .reviews {
+        margin-top: 80px;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .reviews h3 {
+        margin-left: 20px;
+    }
+    .review-list {
+        padding: 0;
+    }
+    .review-item {
+        margin: 20px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;  
+    }
+    .star-rating {
+        margin-top: 5px;
+        font-size: 1.5em;
+        color: #FFD700;
+        cursor: pointer;
     }
 }
 
